# nl-nilt

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
artifacts/nl_nilt_benchmarks/: analytical_comparison_cadet.npz  analytical_comparison_data.npz  analytical_comparison_results.json  cadet_breakthrough_cfeed0.5.npz  cadet_breakthrough_cfeed1.0.npz  cadet_breakthrough_cfeed10.0.npz  cadet_breakthrough_cfeed2.5.npz  cadet_breakthrough_cfeed20.0.npz  cadet_breakthrough_cfeed5.0.npz  cadet_large_breakthrough_cfeed1.0.npz  cadet_large_breakthrough_cfeed5.0.npz  convergence_iter0.npz  convergence_iter1.npz  convergence_iter2.npz  convergence_iter3.npz  convergence_iter4.npz  convergence_iter5.npz  convergence_iter6.npz  convergence_iter7.npz  convergence_iter8.npz  convergence_iter9.npz  convergence_linear.npz  convergence_traces.json  large_column_results.json  loading_sweep_results.json  nlnilt_breakthrough_cfeed0.1.npz  nlnilt_breakthrough_cfeed0.5.npz  nlnilt_breakthrough_cfeed1.0.npz  nlnilt_breakthrough_cfeed10.0.npz  nlnilt_breakthrough_cfeed2.5.npz  nlnilt_breakthrough_cfeed20.0.npz  nlnilt_breakthrough_cfeed5.0.npz  nlnilt_large_breakthrough_cfeed1.0.npz  nlnilt_large_breakthrough_cfeed5.0.npz  param_estimation_results.json  pole_shift_analysis.json  pole_shift_data.npz  sma_benchmark_results.json  sma_breakthrough_cfeed1.0e+00.npz  (+4 more)
cadet_lab/: __init__.py
notebooks/: nl_nilt_paper_figures.py
paper/: nl_nilt_paper.tex
scripts/: chen_hsu_reproduction.py  run_nl_nilt_benchmarks.py
tests/: conftest.py  test_nilt.py  test_nl_nilt.py
(+17 files in other folders)
